--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>EXPLOSIVES</title>
+  <link rel='stylesheet' type='text/css' href='css/main.css'>
 </head>
 <body>
   <h1>ACME EXPLOSIVES</h1>
 
-  <script src='bundles.js'></script>
+
+  <script
+  src="https://code.jquery.com/jquery-3.2.1.min.js"
+  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+  crossorigin="anonymous"></script>
+  <script src='./dist/bundle.js'></script>
 </body>
 </html>
