got products printed to the dom and styled

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <h1>ACME EXPLOSIVES</h1>
-
+  <div id='productOutput'></div>
 
   <script
   src="https://code.jquery.com/jquery-3.2.1.min.js"
