added some new products and have them printing to the dom

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 </head>
 <body>
   <h1>ACME EXPLOSIVES</h1>
+  <select id='selection'>
+    <option value="Choose Category">Choose Category</option>      
+    <option value="Fireworks">Fireworks</option>
+    <option value="Demolition">Demolition</option>
+  </select>  
   <div id='productOutput'></div>
 
   <script
